<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_result_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_titleAndCart"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_900"
        android:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_chocobo_caller"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="5dp"
                android:src="@drawable/ic_chocobo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="Qube's Exvius Shop"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/cv_button_shopping_cart"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="6dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_cart"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_add_shopping_cart_black_24dp" />

                    <!--<TextView-->
                    <!--android:id="@+id/tv_cart_quantity"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_toRightOf="@+id/iv_cart"-->
                    <!--android:gravity="center"-->
                    <!--android:text="0"-->
                    <!--android:textColor="@color/black"-->
                    <!--android:textSize="20sp" />-->
                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>