...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/button_cancel_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_cancel" />
...
                android:text="SPR"
                android:textSize="20sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/button_detail_add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="25dp"
            android:text="Add To Cart" />

...
