...
                android:text="Qube's Exvius Shop"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/cv_checkout"
                android:layout_width="80dp"
                android:layout_height="40sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="6dp"
                app:cardCornerRadius="10dp"
...
